--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -59,6 +59,10 @@ section {
     padding-left: 30px;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 .normal {
     background-color: white;
     color: black;
@@ -67,13 +71,27 @@ section {
 .imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 15px 0px rgba(0, 0, 0, 0.389);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p {
-    background-color: rgba(0, 0, 0, 0.252);
+    text-shadow: 1px 1px 0px black;
+    background-color: rgba(0, 0, 0, 0.503);
     display:inline-block;
     padding: 8px;
+    border-radius: 5px;
 } 
+
+#img01 {
+    background-image: url('../desafio-cordel/imagens/background001.jpg');
+    background-position: right center;
+}
+
+#img02 {
+background-image: url('../desafio-cordel/imagens/background002.jpg');
+}
 
 footer {
     background-color: black;
