--- a/exercicios/ex026/imagens/mq001/estilos/tela.css
+++ b/exercicios/ex026/imagens/mq001/estilos/tela.css
@@ -11,3 +11,29 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
 }
+
+header {
+    background-color: rgba(180, 180, 180, 0.4);
+}
+
+header > h1 {
+    text-align: center;
+}
+
+menu ul {
+    list-style-type: none;
+    background-color: gray;
+}
+
+menu li {
+    display: inline-block;
+    padding: 10px;
+    background-color: rgb(80, 80, 80);
+    color: white;
+}
+
+article {
+    width: 600px;
+    display: block;
+    margin: auto;
+}
