--- a/exercicios/ex026/mq004/estilos/style.css
+++ b/exercicios/ex026/mq004/estilos/style.css
@@ -38,11 +38,11 @@ h1 {
 
 img {
     display: block;
-    margin: auto
+    margin: auto;
 }
 
 #phone { display: block; }
 #tablet { display: none; }
 #print { display: none; }
 #pc { display: none; }
-#tv { display: none }
+#tv { display: none; }
