Atualização do exercício mq005

--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -19,8 +19,16 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+.material-icons {
+    background-color: #1b2e98;
+    color: white;
+    text-align: center;
     display: block;
+    cursor: pointer;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
